# MyWeather

./: .gitignore  README.md  main.py  myweather.py  pyproject.toml
examles/: example1.py
src/myweather/: __init__.py
