[tool.poetry]
name = "myweather"
version = "0.2.0"
description = "An openweathermap wrapper"
authors = [
    { name = "tct123", email = "42028373+tct123@users.noreply.github.com" },
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tct123/MyWeather"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
