[tool.poetry]
name = "myweather"
version = "0.2.0"
description = "An openweathermap wrapper"
authors = [
    { name = "tct123", email = "42028373+tct123@users.noreply.github.com" },
]
license.file = "LICENSE"
readme = "README.md"
repository = "https://github.com/tct123/MyWeather"
requires-python = ">=3.13"
dependencies = ["requests"]

[tool.poetry]
packages = [{include = "myweather", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
